<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="number.android.waterdrop.activities.VendorMyContactActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_vendor_contact_i"
            android:textSize="14sp"
            android:lineSpacingExtra="5dp"
            android:padding="16dp"
            android:textColor="@color/black"
            android:background="@color/grey_light"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mobile_number"
            android:background="@drawable/edit_text_border"
            android:hint="@string/mobile_number_hint"
            android:inputType="phone"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pick_contact"
            android:text="@string/pick_contact"
            android:textSize="14sp"
            android:textAllCaps="true"
            android:clickable="true"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="32dp"
            android:id="@+id/vendor_detail"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/vendor_name"
                android:text="Vendor name"
                android:layout_marginBottom="8dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/vendor_number"
                android:text="9999999999"
                android:layout_marginBottom="8dp"
                android:textColor="@color/black"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/wave"
        android:id="@+id/wave"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_continue"
            android:clickable="true"
            android:text="@string/btn_continue"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:drawablePadding="4dip"
            android:paddingTop="@dimen/dp40"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</RelativeLayout>
