<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="number.android.waterdrop.activities.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/dp40"
        android:paddingLeft="@dimen/dp40"
        android:layout_above="@+id/wave"
        android:id="@+id/linearLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logo"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/water_drop"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24sp"
            android:layout_marginBottom="10dp"
            android:text="@string/welcome"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Name"
            android:textSize="14sp"
            android:drawablePadding="15dp"
            android:background="@drawable/edit_text_border"
            android:imeOptions="actionNext"
            android:layout_marginTop="10dp"
            android:id="@+id/user_name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="976543211"
            android:textSize="14sp"
            android:drawablePadding="15dp"
            android:background="@drawable/edit_text_border"
            android:imeOptions="actionNext"
            android:layout_marginTop="10dp"
            android:id="@+id/mobile_number" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="Your delivery address"
            android:id="@+id/address"
            android:textSize="14sp"
            android:maxLines="3"
            android:drawablePadding="15dp"
            android:background="@drawable/edit_text_border"
            android:imeOptions="actionNext"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="Landmark"
            android:id="@+id/landmark"
            android:textSize="14sp"
            android:drawablePadding="15dp"
            android:background="@drawable/edit_text_border"
            android:imeOptions="actionNext"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/terms"
            android:clickable="true"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"
            android:visibility="gone"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/wave"
        android:id="@+id/wave"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/proceed"
            android:clickable="true"
            android:text="@string/btn_proceed"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:drawablePadding="4dip"
            android:paddingTop="@dimen/dp40"
            android:layout_centerInParent="true" />

        </RelativeLayout>

    </RelativeLayout>